# shanten-test

./: CMakeLists.txt  LICENSE  README.md
resources/: .gitignore
src/: shanten.cpp  shanten.hpp  test1.cpp  test2.cpp  test3.cpp
